
2006-10-02  Vincenzo Reale <smart2128@baslug.org>
	* doc/man/it/xvidcap.1.xml: Italian manpage

2006-10-02  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: codecs.c, gnome_ui.c, main.c, Makefile.am: some compatibility
		fixes for Solaris (not all yet, though)
	* src/gnome_options.c: eliminate use of gtk_combo_box_get_active_text
		to depend on gtk+-2.0 v. 2.4 only (rather than 2.6)
	* configure.in, doc/man/Makefile, doc/man/it: Makefile.am, xvidcap.1:
		support for Italian manpage

2006-09-29  Imanol Garcia <imanol.garcia.c@gmail.com>
	* po/es.po: added Spanish translation

2006-09-29  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* doc/man/*/Makefile.am, doc/man.make, configure.in: optimized manpage 
		generation and install
	* doc/xvidcap/de/*: prepared German translation of manual
	* Makefile.am: added xvidcap.png and xvidcap.desktop to EXTRA_DIST
	* Makefile.am: added ppm2mpeg.sh to EXTRA_DIST
	* src: gnome_warning.c, gnome_ui.c, app_data.h, app_data.c, 
		gnome_options.c, main.c, options.c, gnome-xvidcap.glade:
		removed help command setting everywhere
	* doc/xvidcap/C: figures/xvidcap-warning.png,
		figures/prefs-commands.png, xvidcap.xml: removed help command
		setting from the docs, too. Added section for warning dialog.
	* configure.in: included Spanish translation

2006-09-27  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* doc/man/*, doc/xmldocs.make, doc/omf.make: Migrated manpage
		to docbook and docbook2x-man generation. Also added
		architecture for manpage localization.

2006-09-23  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* doc/xmldocs.make: added appid and changed directories to
		make appid for references work
	* src: gnome_ui.c, gnome_options.c, gnome-xvidcap.glade:
		added correct hooks for opening help browser. Also
		enabled F1 shortcut and made help for preferences
		dialog open for active tab

2006-09-22  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* doc: first draft of manual

2006-09-21  Karl H. Beckers  <karl.h.beckers@gmx.net>